fix: optimize backend Docker memory for Render, unify CORS for Vercel, and update render.yaml